--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -116,6 +116,7 @@ import FreshworkLogo from "../components/freshworks-logo.astro";
   .hero {
     object-fit: cover;
     max-height: 400px;
+    width: 100%;
     border-radius: 0.5rem;
   }
 
