--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -10,7 +10,7 @@
 <style>
   header {
     margin: 0 auto;
-    width: var(--container-width);
+    max-width: var(--container-width);
     padding: 1rem;
   }
 </style>
