feat: add max width for hero image

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -117,6 +117,7 @@ import FreshworkLogo from "../components/freshworks-logo.astro";
     object-fit: cover;
     max-height: 400px;
     width: 100%;
+    max-width: 1200px;
     border-radius: 0.5rem;
   }
 
