feat: add boilerplate about us

--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -6,6 +6,7 @@
           Kontakt oss på 210 80 000 eller salg@velt.no.<br />
           Du finner oss i Myntgata 2, 0151 Oslo
         </p>
+        <a href="/terms">Våre standardvilkår</a>
     </div>
 </footer>
 
